# WindowManager

./: .clang-format  .vimrc  AbstractKeyCode.h  AbstractKeyMask.h  AbstractKeyPress.h  AbstractMousePress.h  CMakeLists.txt  Command.h  Environment.h  EnvironmentID.h  Error.h  ErrorHandler.h  Event.h  EventHash.h  EventsMap.h  Handlers.h  LICENSE  Layout.h  Manager.cpp  Manager.h  MemoryID.h  README.md  Window.h  main.cpp
.circleci/: Dockerfile  config.yml  docker-compose.yml
dependencies/: argparse.cmake  gtest.cmake  imlib2.cmake  libsocket.cmake  spdlog.cmake  yaml-cpp.cmake
src/: CMakeLists.txt  main.cpp
src/args/: CMakeLists.txt  Parser.cpp  Parser.h
src/checks/: CMakeLists.txt  Check.cpp  Check.h  CheckMacros.h  ChecksApi.h  Map.h
src/commands/: Command.h
src/common/: CMakeLists.txt  Color.cpp  Color.h  Direction.h  Ratio.h  VariantInterfaceHelpers.h
src/config/: CMakeLists.txt  CommandToYaml.cpp  CommandToYaml.h  EventToYaml.h  Layout.h  Misc.h  Parser.cpp  Parser.h  Window.h  YamlModels.h  YamlToCommand.cpp  YamlToCommand.h  utils.h
src/environment/: CMakeLists.txt  Color.cpp  Color.h  ColorID.h  Command.h  CommandMacro.h  Environment.cpp  Environment.h  Helpers.h  ID.h  ScreenshotHandler.h
src/environment/x11/: AtomID.h  BackgroundImageHandler.cpp  BackgroundImageHandler.h  CPtrHandler.h  Commands.cpp  Environment.cpp  ErrorHandling.cpp  Handlers.cpp  Handlers.h  ScreenshotHandler.cpp  ScreenshotImageHandler.cpp  ScreenshotImageHandler.h  X11ToAbstractEvent.cpp  XClientKeyGrabber.h  XHeaders.h  XHelpers.cpp  XkbComponentNamesRecWrapper.h  XkbRF_VarDefsRecWrapper.h
src/events/: AbstractKeyCode.h  AbstractKeyMask.h  AbstractKeyPress.h  AbstractMouseCode.h  AbstractMousePress.h  AbstractUnknownEvent.h  CMakeLists.txt  Event.h  Hash.h  Map.cpp  Map.h  MouseOverWindow.h  WindowAdded.h  WindowNameUpdated.h  WindowRemoved.h  YamlModels.h  utils.h
src/events/x11/: KeyCodes.cpp  KeyMasks.cpp  MouseCodes.cpp
src/layouts/: CMakeLists.txt  Centered.cpp  Centered.h  Grid.cpp  Grid.h  Helpers.h  Layout.h  Maximized.cpp  Maximized.h  ParallelHorizontal.cpp  ParallelHorizontal.h  ParallelVertical.cpp  ParallelVertical.h  Parameters.h  StackHorizontalBottom.cpp  StackHorizontalBottom.h  StackHorizontalDouble.cpp  StackHorizontalDouble.h  StackHorizontalTop.cpp  StackHorizontalTop.h  StackVerticalDouble.cpp  StackVerticalDouble.h  StackVerticalLeft.cpp  StackVerticalLeft.h  StackVerticalRight.cpp  StackVerticalRight.h
src/log/: CMakeLists.txt  Logger.cpp  Logger.h
src/notifications/: CMakeLists.txt
src/rules/: CMakeLists.txt  Map.h  Rule.cpp  Rule.h  RuleApi.h  RuleMacros.h
src/socket/: CMakeLists.txt  Socket.cpp  Socket.h
src/window/: CMakeLists.txt  FocusManager.h  GroupManager.h  LayoutManager.h  Manager.cpp  Manager.h  Window.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  ColorTest.cpp  RatioTest.cpp
tests/config/: CMakeLists.txt  ParserTest.cpp  all-config.yaml  key-bindings-default-overriden.yaml  key-bindings-with-repeated-cmds.yaml  key-bindings-without-masks.yaml  layouts.yaml  misc.yaml  windows.yaml
tests/events/: CMakeLists.txt  EventsTest.cpp  key-bindings-without-cmd-specified.yaml  key-bindings-without-masks.yaml  key-bindings.yaml
tests/layouts/: CMakeLists.txt  LayoutsTest.cpp
tests/window/: CMakeLists.txt  TestEnvironment.h  WindowManagerTest.cpp
wayland/: Command.cpp  ConcreteKeyCode.cpp  Environment.cpp  Handlers.h
x11/: Command.cpp  ConcreteKeyCode.cpp  Environment.cpp  Handlers.h
