cmake_minimum_required(VERSION 3.28)

project(WindowManager VERSION 0.13.0 LANGUAGES CXX)

set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
set(DEPENDENCIES ${CMAKE_SOURCE_DIR}/dependencies)
set(NATIVE_ENVIRONMENT X11)

add_subdirectory(src)
add_subdirectory(tests)
