add_executable(EventsTest
	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/EventsTest.cpp
)
target_include_directories(EventsTest
	PUBLIC
	${SRC_INCLUDE_DIR}
	${GTEST_INCLUDE_DIRS}
)
target_link_libraries(EventsTest
	${GTEST_LIBRARIES}
	events
	common
)
add_dependencies(EventsTest
	googletestlib
	events
	common
)
add_test(NAME EventsTest COMMAND EventsTest WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
